# stm32-rust-templates

./: LICENSE  README.md
g431cbu6-training/: Cargo.toml  Embed.toml  README.md  attach.gdb  cargo.gdb  reset.gdb
g431cbu6-training/.cargo/: config.toml
g431cbu6-training/src/: main.rs
g474rbt6/: Cargo.toml  Embed.toml  README.md  attach.gdb  memory.x  reset.gdb
g474rbt6/.cargo/: config.toml
g474rbt6/src/: main.rs
