[package]
name = "g431cbu6-training"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.1"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["defmt"] }

[dependencies.stm32g4xx-hal]
version = "0.1.0"
git = "https://github.com/stm32-rs/stm32g4xx-hal"
features = ["stm32g431", "rt"]

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 'z'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
# (this doesn't increase size on flash)
debug = 2
